--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -6,3 +6,29 @@ body {
 img {
   max-width: 100%;
 }
+
+// all class
+
+.list-rezet {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+
+  & li {
+    margin: 0;
+    padding: 0;
+  }
+}
+
+.visually-hidden {
+  position: absolute;
+  z-index: -1;
+  width: 0;
+  height: 0;
+  padding: 0;
+  margin: 0;
+  border: none;
+  overflow: hidden;
+}
+
+// \ all class
