--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -9,11 +9,11 @@ block main
 
   canvas#bdCanvas.bdCanvas
 
-  include templates/header.pug
+  //- include templates/header.pug
   
-  main
+  //- main
   
-    h2 index.html
+    //- h2 index.html
 
-  include templates/footer.pug
+  //- include templates/footer.pug
   
