--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,4 +1,5 @@
-@import "scaffolding.less";
-@import "blocks/header.less";
-@import "blocks/footer.less";
+@import "./variable.less";
+@import "./scaffolding.less";
+@import "./blocks/header.less";
+@import "./blocks/footer.less";
 @import "./blocks/bdCanvas.less";
