--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -2,18 +2,18 @@ extends templates/template.pug
 
 block variables
   //- переменная для template.pug
-  - var pageTitle = "first page"
+  - var pageTitle = "Записки верстальщика"
 
 
 block main
 
   canvas#bdCanvas.bdCanvas
 
-  //- include templates/header.pug
+  include templates/header.pug
   
-  //- main
+  main
   
-    //- h2 index.html
+    h2 index.html
 
-  //- include templates/footer.pug
+  include templates/footer.pug
   
