--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -1,8 +1,3 @@
 .header {
-  min-height: 70px;
-  background-image: url(../img/bg_head.png);
-  background-repeat: no-repeat;
-  background-size: auto 70px;
-
-  color: @text-color-light;
+  display: block;
 }
