--- a/src/less/style.less
+++ b/src/less/style.less
@@ -1,6 +1,8 @@
 @import "./fonts.less";
 @import "./variable.less";
 @import "./scaffolding.less";
+@import "./blocks/btn.less";
 @import "./blocks/header.less";
 @import "./blocks/footer.less";
 @import "./blocks/bdCanvas.less";
+@import "./blocks/home.less";
