--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -1,22 +1,19 @@
 .btn {
-  font-size: 25px;
-  line-height: 1;
-  color: @text-color-light;
+  display: inline-block;
   background-color: transparent;
+  border: 1px solid #ffff00;
+  padding: 0;
+  margin:  8vh 0 0;
+  box-sizing: border-box;
+  height: 50px;
   width: 100%;
   max-width: 300px;
-  height: 50px;
-  border: 1px solid #ffff00;
   border-radius: 25px;
-  margin: 0 auto;
-  padding: 0 0;
+  
 
-  @media (min-width: @min-md) {
-    height: 80px;
-    border-radius: 40px;
-  }
-
-  @media (min-width: @min-lg) {
-    max-width: 360px;
-  }
+  color: @text-color-light;
+  text-align: center;
+  line-height: 50px;
+  text-decoration: none;
+  font-size: 23px;
 }
