--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -7,7 +7,7 @@
   display: block;
   min-height: 199px;
   background-image: url(../img/bg_head@768.png);
-  background-position: center -30px;
+  background-position: center top;
   background-repeat: no-repeat;
   background-size: 768px auto;
 
@@ -15,9 +15,8 @@
     padding-top: 20px;
     background-image: url(../img/bg_head@1280.png);
     background-size: 1280px auto;
-    background-position: center top;
 
-    .container {
+    .wrap {
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -27,10 +26,6 @@
   @media (min-width: 1280px) {
     background-image: url(../img/bg_head@2000.png);
     background-size: 2000px auto;
-  }
-
-  @media (max-height: 400px) {
-    background-position: center -70px;
   }
 }
 
