--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -12,11 +12,9 @@ img {
   max-width: 100%;
   display: inline-block;
 }
-main {
-  height: 100%;
-}
-main,
-.container {
+
+
+.wrap {
   display: block;
   width: 100%;
   max-width: 945px;
@@ -57,19 +55,12 @@ main,
   overflow: hidden;
 }
 
-section {
-  min-height: 100vh;
-  height: 100%;
-  padding-top: 80px;
-  padding-bottom: 30px;
-  box-sizing: border-box;
+.flex-column-center {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  @media (min-width: @min-md) {
-    padding-top: 80px;
-  }
+  height: 100vh;
 }
+
 // \ all class
