верстка первого экрана - адаптив

--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -27,6 +27,10 @@
     background-image: url(../img/bg_head@2000.png);
     background-size: 2000px auto;
   }
+
+  @media (max-height: 600px) {
+    background-position: center -50px;
+  }
 }
 
 .header__logo {
