html верстка слайдера на pug

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -13,7 +13,9 @@ block main
   
   main.wrap
 
-    include templates/home.pug
+    include blocks/home.pug
+
+    include blocks/css.pug
 
   include templates/footer.pug
   
