--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -76,4 +76,17 @@ section {
   }
 }
 
+.section-title {
+  font-size: 49px;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.no-js {
+  min-height: 100vh;
+
+  & .flex-column-center {
+    min-height: 100vh;
+  }
+}
 // \ all class
