--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -80,13 +80,17 @@ section {
   font-size: 49px;
   text-transform: uppercase;
   text-align: center;
+  margin: 0;
 }
 
 .no-js {
   min-height: 100vh;
+  height: 100%;
+  padding: 100px 0;
 
   & .flex-column-center {
     min-height: 100vh;
+    height: 100%;
   }
 }
 // \ all class
