верстка карт слайдера без js, адаптив

--- a/src/pug/blocks/css.pug
+++ b/src/pug/blocks/css.pug
@@ -21,6 +21,6 @@ section#css.css.no-js
 
       +card("imgSlide-1.jpg", "css", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно ")
 
-      +card("imgSlide-2.jpg", "js", "Далеко-далеко за словесными горами в стране гласных и согласных живут рыбные тексты. Заголовок свою маленькая ")
+      +card("imgSlide-2.jpg", "Что такое CSS?", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц... ")
       
       +card("imgSlide-3.jpg", "svg", "повстречался необходимыми бросил языком дороге маленькая вдали! Агентство дорогу lorem, заглавных диких первую живет?")
