--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -1,32 +1,43 @@
+@min-sm-slider: 580px;
+@min-md-slider: 675px;
+@min-lg-slider: 835px;
+
 .sider {
   list-style: none;
   margin: 0;
   padding: 40px 0;
+  width: 100%;
 }
 
 .no-js {
-  
+
   .sider {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
+  }
+
+  .slider__item {
+    margin-bottom: 40px;
+
+    margin-right: 2px;
+    margin-left: 2px;
+
+    &:last-child {
+      margin-right: 2px;
+    }
   }
 }
 
 .slider__item {
   width: 145px;
   margin-right: 10px;
-  margin-bottom: 40px;
 
   display: flex;
   flex-direction: column;
 
   background-color: #fff;
   color: #000;
-
-  &:nth-child(2n) {
-    margin-right: 0;
-  }
 
   &:last-child {
     margin-right: 0;
@@ -47,7 +58,7 @@
   flex-grow: 1;
 }
 
-.slider__title  {
+.slider__title {
   margin: 0 0 15px;
   padding: 0;
 
@@ -67,4 +78,53 @@
   text-align: center;
   font-size: 13px;
   color: #767676;
+}
+
+@media (min-width: @min-sm-slider) {
+  .slider__item {
+    width: 215px;
+  }
+
+  .slider__text-wrap {
+    padding: 35px 15px 20px;
+  }
+
+  .slider__title {
+    font-size: 17px;
+    margin-bottom: 25px;
+  }
+
+  .slider__text {
+    font-size: 15px;
+  }
+
+  .slider__link {
+    font-size: 16px;
+  }
+}
+
+@media (min-width: @min-sm-slider) {
+  .slider__item {
+    width: 260px;
+    margin-right: 15px;
+  }
+
+  .slider__title {
+    font-size: 20px;
+  }
+
+  .slider__text {
+    font-size: 15px;
+    margin-bottom: 35px;
+  }
+
+  .slider__link {
+    font-size: 17px;
+  }
+}
+
+@media (min-width: @min-lg-slider) {
+  .slider__item {
+    margin-right: 79px;
+  }
 }
