--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -56,7 +56,7 @@ img {
 }
 
 section {
-  height: 100vh;
+  min-height: 100vh;
 
   @media (max-height: 500px) {
     height: auto;
@@ -68,7 +68,9 @@ section {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
+  padding: 80px 0;
+  box-sizing: border-box;
 
   @media (max-height: 500px) {
     height: auto;
