--- a/src/pug/blocks/css.pug
+++ b/src/pug/blocks/css.pug
@@ -19,7 +19,7 @@ section#css.css.no-js
 
     ul.sider
 
-      +card("imgSlide-1.jpg", "css", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно ")
+      +card("imgSlide-1.jpg", "css", "А вот еще один таймер. В нем используется библиотека Snapsvg. Для работы данного таймера необходимо лишь подключить timer.js и вызвать функцию svgTimer() с параметрами. При этом на странице может находиться сразу несколько таймеров с разным отсчетом времени. Первый обязательный параметр это блок который и будет нашим таймером. Следующие три параметра это время: часы, минуты, секунды... ")
 
       +card("imgSlide-2.jpg", "Что такое CSS?", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц... ")
       
