--- a/src/less/blocks/header.less
+++ b/src/less/blocks/header.less
@@ -4,6 +4,7 @@
   left: 0;
   right: 0;
   padding-top: 10px;
+  z-index: 9;
 
   display: block;
 
@@ -52,8 +53,8 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 149px;
-    background-image: linear-gradient(#17152f 27%, rgba(0, 0, 0, 0));
+    height: 110px;
+    background-image: linear-gradient(#17152f 27%, rgba(0, 0, 0, 0) 60%);
     z-index: -2;
   }
 }
