--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -7,6 +7,7 @@
   margin: 0;
   padding: 40px 0;
   width: 100%;
+  text-size-adjust: 100%;
 }
 
 .no-js {
@@ -30,7 +31,7 @@
 }
 
 .slider__item {
-  width: 145px;
+  width: 100%;
   margin-right: 10px;
 
   display: flex;
@@ -45,8 +46,13 @@
 }
 
 .slider__img-container {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto 0;
+
   img {
     display: block;
+    margin: 0 auto;
   }
 }
 
@@ -56,6 +62,8 @@
 
   padding: 20px 12px 10px;
   flex-grow: 1;
+
+  text-align: center;
 }
 
 .slider__title {
@@ -63,12 +71,12 @@
   padding: 0;
 
   font-weight: 400;
-  font-size: 14px;
+  font-size: 18px;
 }
 
 .slider__text {
   margin: 0 0 18px;
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .slider__link {
@@ -78,53 +86,4 @@
   text-align: center;
   font-size: 13px;
   color: #767676;
-}
-
-@media (min-width: @min-sm-slider) {
-  .slider__item {
-    width: 215px;
-  }
-
-  .slider__text-wrap {
-    padding: 35px 15px 20px;
-  }
-
-  .slider__title {
-    font-size: 17px;
-    margin-bottom: 25px;
-  }
-
-  .slider__text {
-    font-size: 15px;
-  }
-
-  .slider__link {
-    font-size: 16px;
-  }
-}
-
-@media (min-width: @min-sm-slider) {
-  .slider__item {
-    width: 260px;
-    margin-right: 15px;
-  }
-
-  .slider__title {
-    font-size: 20px;
-  }
-
-  .slider__text {
-    font-size: 15px;
-    margin-bottom: 35px;
-  }
-
-  .slider__link {
-    font-size: 17px;
-  }
-}
-
-@media (min-width: @min-lg-slider) {
-  .slider__item {
-    margin-right: 79px;
-  }
 }
