--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -69,7 +69,6 @@ section {
   justify-content: center;
   align-items: center;
   min-height: 100vh;
-  padding: 80px 0;
   box-sizing: border-box;
 
   @media (max-height: 500px) {
@@ -88,7 +87,7 @@ section {
 .no-js {
   min-height: 100vh;
   height: 100%;
-  padding: 100px 0;
+  padding: 100px 0 0;
 
   & .flex-column-center {
     min-height: 100vh;
