адаптировал для IE

--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -9,6 +9,10 @@ html(lang="ru")
     title #{pageTitle}
     link(rel="stylesheet", href="css/style.css")
 
+    <!--[if IE]>
+    link(rel="stylesheet", href="css/ie.css")
+    <![indif]-->
+
   body
 
 
