--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -61,6 +61,15 @@ section {
   @media (max-height: 500px) {
     height: auto;
   }
+
+
+  @media screen and (-ms-high-contrast: active),
+  (-ms-high-contrast: none) {
+    min-height: auto;
+    height: auto;
+    padding: 70px 0;
+  }
+
 }
 
 .flex-column-center {
@@ -75,6 +84,13 @@ section {
     height: auto;
     padding: 50px 0;
   }
+
+  @media screen and (-ms-high-contrast: active),
+  (-ms-high-contrast: none) {
+    min-height: auto;
+    height: auto;
+  }
+
 }
 
 .section-title {
@@ -94,4 +110,5 @@ section {
     height: 100%;
   }
 }
+
 // \ all class
