--- a/src/pug/blocks/css.pug
+++ b/src/pug/blocks/css.pug
@@ -17,10 +17,12 @@ section#css.css.no-js
     
     h2.section-title css
 
-    ul.sider
+    .slider_1-js
 
-      +card("clock.jpg", "css", "А вот еще один таймер. В нем используется библиотека Snapsvg. Для работы данного таймера необходимо лишь подключить timer.js и вызвать функцию svgTimer() с параметрами. При этом на странице может находиться сразу несколько таймеров с разным отсчетом времени. Первый обязательный параметр это блок который и будет нашим таймером. Следующие три параметра это время: часы, минуты, секунды... ")
+      ul.sider
 
-      +card("imgSlide-2.jpg", "Что такое CSS?", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц... ")
-      
-      +card("imgSlide-3.jpg", "svg", "повстречался необходимыми бросил языком дороге маленькая вдали! Агентство дорогу lorem, заглавных диких первую живет?")
+        +card("clock.jpg", "css", "А вот еще один таймер. В нем используется библиотека Snapsvg. Для работы данного таймера необходимо лишь подключить timer.js и вызвать функцию svgTimer() с параметрами. При этом на странице может находиться сразу несколько таймеров с разным отсчетом времени. Первый обязательный параметр это блок который и будет нашим таймером. Следующие три параметра это время: часы, минуты, секунды... ")
+
+        +card("imgSlide-2.jpg", "Что такое CSS?", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц... ")
+        
+        +card("imgSlide-3.jpg", "svg", "повстречался необходимыми бросил языком дороге маленькая вдали! Агентство дорогу lorem, заглавных диких первую живет?")
