подготовка слайдера js

--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -2,6 +2,11 @@
 @min-md-slider: 675px;
 @min-lg-slider: 835px;
 
+.slider-wrap {
+  overflow: hidden;
+  width: 100%;
+}
+
 .sider {
   list-style: none;
   margin: 0;
