слайдеру добавил курсор, мелкие правки

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,7 +17,7 @@ block main
 
     include blocks/css.pug
 
-    include blocks/js.pug
+    //- include blocks/js.pug
 
   include templates/footer.pug
   
