--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -5,16 +5,23 @@
 .slider-wrap {
   overflow: hidden;
   width: 100%;
+  padding: 40px 0;
 }
 
 .sider {
   list-style: none;
   margin: 0;
-  padding: 40px 0;
+  padding: 0;
   width: 100%;
   text-size-adjust: 100%;
   display: flex;
   user-select: none;
+  cursor: grab;
+
+}
+
+.sider--active {
+  cursor: grabbing;
 }
 
 .no-js {
