--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -99,3 +99,19 @@
   font-size: 13px;
   color: #767676;
 }
+
+.control {
+  margin-top: 35px;
+  background-color: #f2e41d;
+  height: 4px;
+  font-size: 0;
+}
+
+.controller {
+  margin-top: -2px;
+  display: inline-block;
+  background-color: #fff;
+  height: 8px;
+  min-width: 10px;
+  cursor: grab;
+}
