--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -8,7 +8,7 @@
   padding: 40px 0;
 }
 
-.sider {
+.slider {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -20,13 +20,13 @@
 
 }
 
-.sider--active {
+.slider-wrap .slider--active {
   cursor: grabbing;
 }
 
 .no-js {
 
-  .sider {
+  .slider {
     flex-wrap: wrap;
     justify-content: space-around;
   }
