--- a/src/pug/blocks/css.pug
+++ b/src/pug/blocks/css.pug
@@ -19,7 +19,7 @@ section#css.css.no-js
 
     .slider_1-js.slider-wrap
 
-      ul.sider
+      ul.slider
 
 
         +card("imgSlide-2.jpg", "Что такое CSS?", "Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц... ")
