--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -17,7 +17,9 @@ block main
 
     include blocks/css.pug
 
-    //- include blocks/js.pug
+    include blocks/js.pug
+
+    include blocks/about.pug
 
   include templates/footer.pug
   
