--- a/src/pug/blocks/about.pug
+++ b/src/pug/blocks/about.pug
@@ -1,6 +1,8 @@
 section#about.about
   .flex-column-center
 
+    h2.section-title Обо мне
+
     .about__wrap
 
       .about__wrap-img
@@ -8,7 +10,7 @@ section#about.about
 
       .about__content
 
-        h3.about__title Меня зовут александр
+        h3.about__title Меня зовут Александр
 
         p.about__text
           | Несколько слов обо мне. Формальный язык описания внешнего вида документа, написанного с использованием языка разметки. Преимущественно используется как средство описания, оформления внешнего вида веб-страниц...
@@ -23,4 +25,4 @@ section#about.about
           p.about_address-contact
             | uzinok@yandex.ru
 
-    a.btn.home__btn(href="#") Задать вопрос
+    a.btn.about__btn(href="#") Задать вопрос
