верстка footer адаптив

--- a/src/less/blocks/footer.less
+++ b/src/less/blocks/footer.less
@@ -1,3 +1,13 @@
 footer {
   display: block;
+  position: relative;
+
+  p {
+    color: #bfbfbf;
+    font-size: 14px;
+    text-align: center;
+    margin: 0;
+    padding: 0 0 15px;
+  }
+
 }
