--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -6,6 +6,10 @@ body {
   color: @text-color-light;
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
 
+  
+  background-color: #050818;
+  background-image: radial-gradient(at bottom, lighten(#050818, 5%), #050818);
+
 }
 
 img {
@@ -97,6 +101,7 @@ section {
   font-size: 49px;
   text-transform: uppercase;
   text-align: center;
+  font-weight: 400;
   margin: 0;
 }
 
