--- a/src/less/blocks/bdCanvas.less
+++ b/src/less/blocks/bdCanvas.less
@@ -6,6 +6,16 @@
   height: 100%;
   z-index: -1;
 
-  background-color: #050818;
-  background-image: radial-gradient(at bottom, lighten(#050818, 5%), #050818);
+  
+  background-image: url("../img/bg_footer@768.png");
+  background-position: center bottom;
+  background-repeat: repeat-x;
+
+  @media (min-width: @min-md) {
+    background-image: url("../img/bg_footer@1280.png");
+  }
+
+  @media (min-width: 1280px) {
+    background-image: url("../img/bg_footer@2000.png");
+  }
 }
