html верстка блока обратная связь

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -8,3 +8,5 @@
 @import "./blocks/home.less";
 @import "./blocks/slider.less";
 @import "./blocks/about.less";
+@import "./blocks/order-form.less";
+@import "./blocks/contact.less";
