--- a/src/pug/blocks/home.pug
+++ b/src/pug/blocks/home.pug
@@ -8,6 +8,7 @@ section#home.home
     
     h1.home__title Записки верстальщика
 
-    p.home__subtitle интересные штуки для&nbsp;верстальщика
+    p.home__subtitle 
+      | Собрание демок и фич для верстальщиков
 
     a(href="#").btn.home__btn Обратная связь
