верстка блока контакты - адаптив

--- a/src/less/blocks/contact.less
+++ b/src/less/blocks/contact.less
@@ -1,3 +1,16 @@
-.contact__btn {
-  background-color: #ffff00;
+::placeholder {
+  color: #767676;
+}
+
+.contact {
+  display: none;
+
+  &.no-js {
+    display: block;
+  }
+}
+
+.contact-title {
+  font-size: 25px;
+  margin-bottom: 4vh;
 }
