--- a/src/less/blocks/order-form.less
+++ b/src/less/blocks/order-form.less
@@ -1,3 +1,60 @@
 .order-form {
   background-color: #fff;
+  padding: 30px 15px;
+
+  @media (min-width: @min-md) {
+    width: 718px;
+    padding: 70px 80px 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
+
+
+.input-block {
+  display: flex;
+  flex-direction: column;
+
+  @media (min-width: @min-md) {
+    width: 100%;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.input-inner {
+  @font-size: 14px;
+
+  padding: 0;
+  margin: 0 0 18px;
+  box-shadow: none;
+  border: none;
+  background-color: #fff;
+  padding: 5px 0;
+  border-bottom: 1px solid #000;
+  width: 100%;
+  height: @font-size + 5px * 2;
+  box-sizing: border-box;
+  font-family: "Open Sans", Arial, Helvetica, sans-serif;
+  font-size: @font-size;
+  line-height: 1;
+
+  @media (min-width: @min-md) {
+    width: 165px;
+  }
+}
+
+.inner-textarea {
+  margin-bottom: 40px;
+  overflow: hidden;
+
+  @media (min-width: @min-md) {
+    width: 100%;
+  }
+}
+
+.contact__btn {
+  background-color: #ffff00;
+  color: #000;
 }
