--- a/src/pug/blocks/about.pug
+++ b/src/pug/blocks/about.pug
@@ -25,4 +25,4 @@ section#about.about
           p.about_address-contact
             | uzinok@yandex.ru
 
-    a.btn.about__btn(href="#") Задать вопрос
+    a.btn.about__btn(href="#contact") Задать вопрос
