замена ссылки на кнопку для открытия popup

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -10,3 +10,4 @@
 @import "./blocks/about.less";
 @import "./blocks/order-form.less";
 @import "./blocks/contact.less";
+@import "./blocks/popup.less";
