--- a/src/pug/blocks/home.pug
+++ b/src/pug/blocks/home.pug
@@ -11,4 +11,4 @@ section#home.home
     p.home__subtitle 
       | Собрание демок и фич для верстальщиков
 
-    a(href="#contact").btn.home__btn Обратная связь
+    a(href="#contact").btn.home__btn.popup-contact Обратная связь
