--- a/src/less/blocks/order-form.less
+++ b/src/less/blocks/order-form.less
@@ -1,6 +1,7 @@
 .order-form {
   background-color: #fff;
   padding: 30px 15px;
+  box-sizing: border-box;
 
   @media (min-width: @min-md) {
     width: 718px;
