--- a/src/pug/blocks/contact.pug
+++ b/src/pug/blocks/contact.pug
@@ -1,5 +1,7 @@
 section#contact.contact.no-js
 
+  button.close-popup
+
   .flex-column-center.flex-column-center--contact
     
     h2.section-title.contact-title Задайте мне вопрос
