--- a/src/less/blocks/popup.less
+++ b/src/less/blocks/popup.less
@@ -1,3 +1,65 @@
 .popup {
-  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  padding-left: 10px;
+  padding-right: 10px;
+  box-sizing: border-box;
+  z-index: 9;
+
+  & .flex-column-center {
+    min-height: auto;
+    background-color: #fff;
+    padding: 0 10px;
+    box-sizing: border-box;
+    width: 100%;
+    max-width: 750px;
+  }
+
+  & .section-title {
+    color: #000;
+    font-size: 36px;
+    padding-top: 30px;
+  }
+
+  & .close-popup {
+    display: block;
+  }
+}
+
+.close-popup {
+  display: none;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0);
+  border: none;
+  padding: 0;
+  margin: 0 0 10px;
+  width: 22px;
+  height: 22px;
+
+  &::before,
+  &::after {
+    content: "";
+    display: block;
+    width: 30px;
+    height: 1px;
+    background-color: #e8e803;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+  }
+
+  &::before {
+    transform: translate(-50%, -50%) rotate(45deg);
+  }
+  &::after {
+    transform: translate(-50%,-50%) rotate(-45deg);
+  }
 }
