--- a/src/less/blocks/order-form.less
+++ b/src/less/blocks/order-form.less
@@ -40,9 +40,19 @@
   font-family: "Open Sans", Arial, Helvetica, sans-serif;
   font-size: @font-size;
   line-height: 1;
+  outline: none;
 
   @media (min-width: @min-md) {
     width: 165px;
+  }
+
+  &:hover {
+    border-bottom-color: #ffff00;
+  }
+
+  &:focus {
+    border-bottom-color: #ffff00;
+    background-color: rgba(255, 255, 0, 0.2);
   }
 }
 
@@ -58,4 +68,13 @@
 .contact__btn {
   background-color: #ffff00;
   color: #000;
+
+  &:hover {
+    background-color: rgba(0,0,0,0);
+  }
+
+  &:focus {
+    background-color: rgba(0,0,0,0);
+    box-shadow: none;
+  }
 }
