--- a/src/less/blocks/popup.less
+++ b/src/less/blocks/popup.less
@@ -43,6 +43,7 @@
   margin: 0 0 10px;
   width: 22px;
   height: 22px;
+  outline: none;
 
   &::before,
   &::after {
@@ -61,5 +62,14 @@
   }
   &::after {
     transform: translate(-50%,-50%) rotate(-45deg);
+  }
+
+  &:hover {
+    background-color: rgba(255, 255, 0, 0.2);
+  }
+
+  &:focus {
+    background-color: rgba(255, 255, 0, 0.2);
+    border: 1px solid #ffff00;
   }
 }
