--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -98,6 +98,10 @@
   text-align: center;
   font-size: 13px;
   color: #767676;
+
+  &:hover {
+    text-decoration: none;
+  }
 }
 
 .control {
@@ -124,5 +128,12 @@
     left: 0;
     top: 6px;
     z-index: 9;
+  }
+
+  &:hover {
+
+    &::before {
+      box-shadow: 0 0 10px rgba(255, 255, 0, 0.5);
+    }
   }
 }
