адаптация для IE

--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -2,6 +2,7 @@
   margin: 4vh auto;
   background-color: #fff;
   color: #000;
+  width: 100%;
 
   @media (min-width: @min-md) {
     display: flex;
