--- a/src/less/style.less
+++ b/src/less/style.less
@@ -11,3 +11,9 @@
 @import "./blocks/order-form.less";
 @import "./blocks/contact.less";
 @import "./blocks/popup.less";
+
+// for IE
+@media screen and (-ms-high-contrast: active),
+(-ms-high-contrast: none) {
+  @import "./ie.less";
+}
