--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -19,6 +19,8 @@ block main
 
     include blocks/js.pug
 
+    include blocks/svg.pug
+
     include blocks/about.pug
 
     include blocks/contact.pug
