--- a/src/pug/templates/header.pug
+++ b/src/pug/templates/header.pug
@@ -15,12 +15,8 @@ header.header
       ul.header__list.list-rezet
 
         li.header__item
-          a(href="#home")
+          a(href="#home").link-home
             span.visually-hidden наверх
-
-            svg(xmlns="http://www.w3.org/2000/svg", viewBox="0 0 32 32", width="19px", height="19px")
-              path(d="M32 19l-6-6v-9h-4v5l-6-6-16 16v1h4v10h10v-6h4v6h10v-10h4z", fill="transparent", stroke="#f4f4f2", stroke-width="3")
-
 
         li.header__item
           a(href="#css") css
