--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -69,6 +69,8 @@ section {
 }
 
 .flex-column-center {
+  
+  position: relative;
   display: flex;
   flex-direction: column;
   justify-content: center;
