--- a/src/less/blocks/slider.less
+++ b/src/less/blocks/slider.less
@@ -13,7 +13,6 @@
   margin: 0;
   padding: 0;
   width: 100%;
-  text-size-adjust: 100%;
   display: flex;
   user-select: none;
   cursor: grab;
@@ -109,6 +108,11 @@
   background-color: #f2e41d;
   height: 4px;
   font-size: 0;
+
+  width: 100%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 .controller {
