--- a/src/less/blocks/about.less
+++ b/src/less/blocks/about.less
@@ -79,6 +79,16 @@
 }
 
 .about_address-contact {
+  display: block;
   margin: 0;
   font-size: 16px;
+  color: #000;
+
+  &:hover {
+    text-decoration: none;
+  }
+
+  &:focus {
+    opacity: 0.7;
+  }
 }
