--- a/src/pug/blocks/contact.pug
+++ b/src/pug/blocks/contact.pug
@@ -1,6 +1,6 @@
 section#contact.contact.no-js
 
-  button.close-popup
+  button.close-popup(aria-label="Скрыть окно с формой")
 
   .flex-column-center.flex-column-center--contact
     
