--- a/src/pug/blocks/home.pug
+++ b/src/pug/blocks/home.pug
@@ -2,7 +2,7 @@ section#home.home
 
   .flex-column-center
 
-    svg(role="img", xmlns="http://www.w3.org/2000/svg", width="120", height="120", viewBox="0 0 64 64" class="home__logo")
+    svg(role="img", aria-label="Логотип сайта" xmlns="http://www.w3.org/2000/svg", width="120", height="120", viewBox="0 0 64 64" class="home__logo")
       circle(fill="#f7f6ff", cx="32", cy="32", r="32")
       path(fill="#17152f", d="M7.75 32.98v-1.99l9.01-5.92v3.41l-5.44 3.43v.16l5.44 3.43v3.43l-9.01-5.95zm12.06 10.1v-2.81h11.34v2.81H19.81zm14.4 0l7.41-22.16h3.04l-7.41 22.16h-3.04zm13.03-7.58l5.44-3.43v-.16l-5.44-3.43v-3.41l9.01 5.9v1.99l-9.01 5.97V35.5z")
     
@@ -11,4 +11,4 @@ section#home.home
     p.home__subtitle 
       | Собрание демок и фич для верстальщиков
 
-    a(href="#contact").btn.home__btn.popup-contact Обратная связь
+    a(href="#contact", aria-label="прокрутить до раздела контакты").btn.home__btn.popup-contact Обратная связь
