--- a/src/less/fonts.less
+++ b/src/less/fonts.less
@@ -3,6 +3,7 @@
   src: local('Open Sans'), local('OpenSans'), url('../fonts/opensans.woff2') format('woff2'), url('../fonts/opensans.woff') format('woff');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
