--- a/src/pug/blocks/contact.pug
+++ b/src/pug/blocks/contact.pug
@@ -17,6 +17,8 @@ section#contact.contact.no-js
         input.input-inner(type="email", placeholder="E-mail", name="emailUser")
 
       textarea.input-inner.inner-textarea(placeholder="Введите текст", name="textUser")
+      div.pos-rel
+        .for_textarea
 
       button.btn.contact__btn
         | отправить
