--- a/src/pug/templates/template.pug
+++ b/src/pug/templates/template.pug
@@ -7,10 +7,10 @@ html(lang="ru")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     meta(http-equiv="X-UA-Compatible", content="ie=edge")
     title #{pageTitle}
-    link(rel="stylesheet", href="css/style.css")
+    link(rel="stylesheet", href="css/style@home.css")
 
     <!--[if IE]>
-    link(rel="stylesheet", href="css/ie.css")
+    link(rel="stylesheet", href="css/ie@home.css")
     <![indif]-->
 
   body
@@ -30,5 +30,5 @@ html(lang="ru")
     block main
 
 
-    script(src="js/main.js")
+    script(src="js/home.js")
 
