--- a/src/pug/blocks/contact.pug
+++ b/src/pug/blocks/contact.pug
@@ -10,13 +10,13 @@ section#contact.contact.no-js
 
       .input-block
 
-        input.input-inner(type="text", placeholder="Имя", name="nameUser")
+        input.input-inner(type="text", placeholder="Имя", name="name")
 
-        input.input-inner(type="tel", placeholder="Телефон", name="telUser")
+        input.input-inner(type="tel", placeholder="+7 (___) ___-__-__", name="tel")
 
-        input.input-inner(type="email", placeholder="E-mail", name="emailUser")
+        input.input-inner(type="email", placeholder="E-mail", name="email")
 
-      textarea.input-inner.inner-textarea(placeholder="Введите текст", name="textUser")
+      textarea.input-inner.inner-textarea(placeholder="Введите текст", name="review" row="1")
       div.pos-rel
         .for_textarea
 
