disabled contact__btn

--- a/src/less/blocks/btn.less
+++ b/src/less/blocks/btn.less
@@ -45,4 +45,15 @@
     background-color: #ffff00;
     color: #000;
   }
+
+  &:disabled{
+    background-color: #8d8d8d;
+    color: #ffffff;
+
+    &:hover,
+    &:focus {
+      background-color: #8d8d8d;
+      color: #ffffff;
+    }
+  }
 }
