правки для темы

--- a/src/less/blocks/order-form.less
+++ b/src/less/blocks/order-form.less
@@ -48,6 +48,7 @@
   line-height: 1;
   outline: none;
   transition: @transition;
+  appearance: none;
   
   @media (min-width: @min-md) {
     width: 165px;
