--- a/src/less/scaffolding.less
+++ b/src/less/scaffolding.less
@@ -94,6 +94,7 @@ section {
   font-weight: 400;
   margin: 0;
   padding: 50px 0 0;
+  color: #ffffff;
   @media (min-width: @min-md) {
     font-size: 39px;
     padding: 0;
