--- a/src/pug/blocks/css.pug
+++ b/src/pug/blocks/css.pug
@@ -2,7 +2,8 @@ section#css.css.no-js
 
   .flex-column-center
     
-    h2.section-title css
+    a.section-title(href="#")
+      h2.section-title css
 
     .slider-wrap
 
